--- a/index.html
+++ b/index.html
@@ -24,18 +24,17 @@
         </div>
         <div class="side two">
             <h2>🌷🌷🌷</h2>
-            <p>Querido(a) [nombre],</p>
+            <p>Querida Ana de Ano,</p>
             <p>
-                En este San Valentín, quiero recordarte lo especial que eres. Cada sonrisa compartida, cada momento
-                juntos es un tesoro. Eres una persona maravillosa, tanto por dentro como por fuera. Valoro cada instante
-                compartido. Gracias por ser quien eres. 🫶
+                Quieres un bocata de tortilla con mayonesa?
+                COQUETA COQUETA COQUETA 🫶
             </p>
             <p>
-                ¡Feliz San Valentín!
+                ¡Feliz San Solterín!
             </p>
             <p>
                 Con cariño,<br>
-                [nombre]
+                Tu amiguito
             </p>
         </div>
     </div>
